use same command in dev as prod for python. having issues running on swarm otherwise (keeps crashing)

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,6 +4,7 @@ services:
 
   vote:
     image: campbel/votingapp-vote:latest
+    command: python app.py
     ports:
       - 30080:80
     deploy:
