update the example voting-app to use a test compose file that doesn't expose ports or volumes. update the test step to use a project name

--- a/Jenkinsfile.template
+++ b/Jenkinsfile.template
@@ -2,13 +2,30 @@ pipeline {
     agent any
 
     triggers { 
-        // build triggers go here
+        
     }
 
     stages {
         stage('Build') {
             steps {
-                // build steps go here
+            
+            }
+        }
+        stage('Test') {
+            steps  {
+            
+            }
+        }
+        stage('Push') {
+            steps {
+
+            }
+        }
+        stage('Deploy') {
+            environment {
+            }
+            steps {
+
             }
         }
     }
