--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,10 +1,6 @@
 version: '2'
 
 services:
-
-version: "2"
-
-services:
   vote:
     image: campbel/votingapp-vote:latest
     build: ./vote
@@ -23,8 +19,6 @@ services:
 
   db:
     image: postgres:9.4
-    volumes:
-      - "db-data:/var/lib/postgresql/data"
 
   test:
     build: ./tests
@@ -32,4 +26,6 @@ services:
       - vote
       - result
       - worker
+      - redis
+      - db
     
